#pragma once
#include "CLI.h"

class WatermarkSystem {
public:
    int run(const AppConfig& cfg);
};